--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -1,27 +1,7 @@
-<!-- <div class="table-responsive">
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">{{ 'USERS.NAME' | translate }}</th>
-                <th scope="col">{{ 'USERS.EMAIL' | translate }}</th>
-                <th scope="col">{{ 'USERS.GLOBALADMIN' | translate }}</th>
-                <th scope="col">{{ 'USERS.STATUS' | translate }}</th>
-                <th scope="col">{{ 'USERS.LOGIN' | translate }}</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of users" class="py-3" app-user-table-row [user]="user">
-            </tr>
-        </tbody>
-    </table>
-</div> -->
-
-
 <div class="mat-elevation-z8">
     <app-loading-spinner *ngIf=" isLoadingResults">
     </app-loading-spinner>
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
