--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -1,11 +1,11 @@
 <div class="mat-elevation-z8">
     <app-loading-spinner *ngIf=" isLoadingResults">
     </app-loading-spinner>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="latest-update" matSortDirection="asc">
+    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ 'APPLICATION-TABLE.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
@@ -16,7 +16,7 @@
 
         <!-- Devices Column -->
         <ng-container matColumnDef="devices">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
                 {{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <ng-container *ngIf="element.iotDevices; else iotZero">
@@ -29,8 +29,8 @@
         </ng-container>
 
         <!-- Latest Update Column -->
-        <ng-container matColumnDef="latest-update">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+        <ng-container matColumnDef="latest-update" class="col-1">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ 'APPLICATION-TABLE.UPDATED' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 {{element.updatedAt | date:'dd/MM yyyy'}}
@@ -39,7 +39,7 @@
 
         <!-- Menu Column -->
         <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef></th>
+            <th mat-header-cell *matHeaderCellDef class="col-1"></th>
             <td mat-cell *matCellDef="let element">
                 <div class="dropdown">
                     <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
