--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -73,7 +73,7 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
 ///////////////////////////////////////// FORM FIELDS //////////////////////////////////////////////////
 
 .mat-form-field {
-  width: 100% !important;
+  width: 100%;
 
   .mat-form-field-wrapper {
     .mat-form-field-appearance-fill .mat-form-field-flex {
