add text to localisation

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item py-2">
           <ul class="navbar-nav flex-column">
-            <p class="ml-2">Generelt</p>
+            <p class="ml-2">{{'NAV.MENU-ITEM-MISC' | translate}}</p>
             <mat-divider></mat-divider>
             <li class="nav-item py-2">
               <a routerLink="/gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
