--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -27,7 +27,7 @@
         <ng-container matColumnDef="menu">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-                <div class="dropdown">
+                <div class="dropdown" *ngIf="hasWritePermission">
                     <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"></a>
