--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -67,7 +67,7 @@
                         [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
                     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
                         <li class="dropdown-item">
-                            <a [routerLink]="[element.id, 'edit-user']"
+                            <a [routerLink]="['/admin/users', element.id, 'edit-user']"
                                 routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
                             </a>
                         </li>
