--- a/src/app/device-model/device-model-detail/device-model-detail.component.html
+++ b/src/app/device-model/device-model-detail/device-model-detail.component.html
@@ -5,37 +5,37 @@
     <div class="row">
         <div class="col-12">
             <h4>{{ 'DEVICE-MODEL.NAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.name}}</p>
+            <p class="mb-5">{{deviceModel.body.name}}</p>
 
             <h4>{{ 'DEVICE-MODEL.ID' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.id}}</p>
+            <p class="mb-5">{{deviceModel.body.id}}</p>
             
             <h4>{{ 'DEVICE-MODEL.BRANDNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.brandName}}</p>
+            <p class="mb-5">{{deviceModel.body.brandName}}</p>
             
             <h4>{{ 'DEVICE-MODEL.MODELNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.modelName}}</p>
+            <p class="mb-5">{{deviceModel.body.modelName}}</p>
             
             <h4>{{ 'DEVICE-MODEL.MANUFACTURERNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.manufacturerName}}</p>
+            <p class="mb-5">{{deviceModel.body.manufacturerName}}</p>
             
             <h4>{{ 'DEVICE-MODEL.CONTROLLEDPROPERTY' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.controlledProperty}}</p>
+            <p class="mb-5">{{deviceModel.body.controlledProperty}}</p>
             
             <h4>{{ 'DEVICE-MODEL.CATEGORY' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.category}}</p>
+            <p class="mb-5">{{deviceModel.body.category}}</p>
             
             <h4>{{ 'DEVICE-MODEL.SUPPORTEDUNITS' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.supportedUnits}}</p>
+            <p class="mb-5">{{deviceModel.body.supportedUnits}}</p>
             
             <h4>{{ 'DEVICE-MODEL.FUNCTION' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.function}}</p>
+            <p class="mb-5">{{deviceModel.body.function}}</p>
             
             <h4>{{ 'DEVICE-MODEL.ENERGYLIMITATIONCLASS' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.energyLimitationClass}}</p>
+            <p class="mb-5">{{deviceModel.body.energyLimitationClass}}</p>
             
             <h4>{{ 'DEVICE-MODEL.SUPPORTEDPROTOCOL' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.supportedProtocol}}</p>
+            <p class="mb-5">{{deviceModel.body.supportedProtocol}}</p>
         </div>
     </div>
 </div>
