--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -10,7 +10,7 @@
             </th>
             <td mat-cell *matCellDef="let element">
                 <a [routerLink]="['device-model-detail', element.id]" routerLinkActive="active" class="application-link">
-                    {{ element.name }}
+                    {{ element.body.name }}
                 </a>
             </td>
         </ng-container>
@@ -27,7 +27,7 @@
         <ng-container matColumnDef="menu">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-                <div class="dropdown" *ngIf="hasWritePermission">
+                <div class="dropdown">
                     <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"></a>
