--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,6 @@
 <app-top-bar [title]="'NAV.SEARCH' | translate" [searchQuery]="query"></app-top-bar>
 
 <div class="m-md-4 p-md-3">
-    <app-search-table [searchResults]="searchResults" [isLoadingResults]="isLoadingResults"
-        [searchText]="decode(query)">
+    <app-search-table [searchText]="decode(query)">
     </app-search-table>
 </div>
