--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -43,7 +43,7 @@
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="gateway-status">
                 {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
