IOT-403 add fiware link text to edit page

--- a/src/app/device-model/device-model-edit/device-model-edit.component.html
+++ b/src/app/device-model/device-model-edit/device-model-edit.component.html
@@ -164,6 +164,13 @@
         </div>
     </div>
 
+    <div class="row mb-2">
+        <div class="form-group mt-3 col-12">
+            <a href="https://fiware-datamodels.readthedocs.io/en/latest/Device/DeviceModel/doc/spec/index.html" target="_blank">
+                {{'QUESTION.DEVICE-MODEL.FIWARE-LINK-TEXT' | translate}}
+            </a> 
+        </div>
+    </div>
   <div class="form-group mt-5">
     <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
     <button class="btn btn-primary ml-2" type="submit">{{ 'GEN.SAVE' | translate}}</button>
