--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -14,7 +14,7 @@
     <div class="row mb-5">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="name">{{'USERS.FORM.NAME' | translate}}</label>*
-            <input type="text" class="form-control" id="name" name="name"
+            <input type="text" class="form-control" id="name" name="name" [disabled]="isKombit"
                 [placeholder]="'USERS.FORM.NAME-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="user.name"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
@@ -23,7 +23,7 @@
     <div class="row mb-5">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="email">{{'USERS.FORM.EMAIL' | translate}}</label>*
-            <input type="text" class="form-control" id="email" name="email"
+            <input type="text" class="form-control" id="email" name="email" [disabled]="isKombit"
                 [placeholder]="'USERS.FORM.EMAIL-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="user.email"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('email'), 'is-valid' : formFailedSubmit && !errorFields.includes('email')}">
@@ -33,7 +33,7 @@
     <div class="row mb-5">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="password">{{'USERS.FORM.PASSWORD' | translate}}</label>*
-            <input type="text" class="form-control" id="password" name="password"
+            <input type="text" class="form-control" id="password" name="password" [disabled]="isKombit"
                 [placeholder]="'USERS.FORM.PASSWORD-PLACEHOLDER' | translate" minlength="6" maxlength="50" required
                 [(ngModel)]="user.password"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
