--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-    <div class="col-xs-12 col-md-10 offset-md-1 mt-5">
+    <app-loading-spinner *ngIf="isLoadingResults">
+    </app-loading-spinner>
+    <div *ngIf="hasSomePermission" class="col-xs-12 col-md-10 offset-md-1 mt-5">
         <!-- <div class="p-5 jumbotron">
             <h1>{{'DASHBOARD.WELCOME' | translate}}</h1>
             <p>{{'DASHBOARD.WELCOME-MESSAGE' | translate}}</p>
@@ -22,6 +24,24 @@
 
                 <a [routerLink]="['/admin/organisations']" routerLinkActive="router-link-active"
                     class="btn btn-secondary btn--animated">Start med at oprette en organisation</a>
+            </div>
+        </header>
+        <div class="header__logo-box">
+            <img src="../../assets/images/OS2-iot-svg.svg" alt="Logo" class="header__logo">
+        </div>
+    </div>
+    <div *ngIf="hasSomePermission == false" class="col-xs-12 col-md-10 offset-md-1 mt-5">
+        <header class="header">
+
+            <div class="header__text-box ">
+                <h1 class="heading-primary mb-5">
+                    <span class="heading-primary--main">
+                        {{'DASHBOARD.WELCOME' | translate}}
+                    </span>
+                    <span class="heading-primary--sub">
+                        {{'DASHBOARD.NO-ACCESS' | translate}}
+                    </span>
+                </h1>
             </div>
         </header>
         <div class="header__logo-box">
