--- a/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
+++ b/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
@@ -1,4 +1,4 @@
-<app-top-bar [showSelectedSort]="false" [title]="'SIGFOX.ADMINITRATION.NAME' | translate"></app-top-bar>
+<app-top-bar [showSelectedSort]="false" [title]="'SIGFOX-GROUP.ADMINISTRATION.NAME' | translate"></app-top-bar>
 
 <div class=" jumbotron m-md-4 p-md-3">
     <div class="row mt-5">
@@ -7,7 +7,7 @@
         </div>
         <div class="col-6">
             <button class="btn btn-primary float-right"
-                (click)="onNewGroup()">{{'SIGFOX.ADMINITRATION.CREATE-NEW-GROUP' | translate}}</button>
+                (click)="onNewGroup()">{{'SIGFOX-GROUP.ADMINISTRATION.CREATE-NEW-GROUP' | translate}}</button>
         </div>
     </div>
     <hr>
