--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-2 pt-md-4">
+<nav class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-2 pt-md-4" >
   <a routerLink="/dashboard" class="navbar-brand p-0 pl-2" href="">
     <div class="img-logo" alt="OS2IoT" [inlineSVG]="'../../assets/images/OS2-iot-svg.svg'"></div>
     <!-- <img class="logo" alt="OS2IoT"
@@ -21,40 +21,42 @@
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="navbar">
       <ul class="navbar-nav flex-column mt-5">
-        <li class="nav-item py-2">
-          <app-global-admin></app-global-admin>
-        </li>
-        <li class="nav-item py-2">
-          <app-organisation-dropdown></app-organisation-dropdown>
-        </li>
-        <li class="nav-item py-2">
-          <ul class="navbar-nav flex-column">
-            <p class="ml-2">{{'NAV.MENU-ITEM-MISC' | translate}}</p>
-            <mat-divider></mat-divider>
-            <li class="nav-item py-2">
-              <a routerLink="/gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
-                id="myLoraGateway">
-                {{ 'NAV.LORA-GATEWAYS' | translate }}
-              </a>
-              <fa-icon [icon]="faBroadcastTower" class="navbar-icon"></fa-icon>
-
-            </li>
-            <li class="nav-item py-2">
-              <a routerLink="/profiles" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
-                id="profiles">
-                {{ 'NAV.PROFILES' | translate }}
-              </a>
-              <fa-icon [icon]="faSlidersH" class="navbar-icon"></fa-icon>
-            </li>
-            <li class="nav-item py-2">
-              <a routerLink="/payload-decoder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
-                id="payload-decoder">
-                {{ 'NAV.PAYLOAD-DECODER' | translate }}
-              </a>
-              <fa-icon [icon]="faNetworkWired" class="navbar-icon"></fa-icon>
-            </li>
-          </ul>
-        </li>
+        <div *ngIf="hasSomePermissions()">
+          <li class="nav-item py-2">
+            <app-global-admin></app-global-admin>
+          </li>
+          <li class="nav-item py-2">
+            <app-organisation-dropdown></app-organisation-dropdown>
+          </li>
+          <li class="nav-item py-2">
+            <ul class="navbar-nav flex-column">
+              <p class="ml-2">{{'NAV.MENU-ITEM-MISC' | translate}}</p>
+              <mat-divider></mat-divider>
+              <li class="nav-item py-2">
+                <a routerLink="/gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+                  id="myLoraGateway">
+                  {{ 'NAV.LORA-GATEWAYS' | translate }}
+                </a>
+                <fa-icon [icon]="faBroadcastTower" class="navbar-icon"></fa-icon>
+  
+              </li>
+              <li class="nav-item py-2">
+                <a routerLink="/profiles" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+                  id="profiles">
+                  {{ 'NAV.PROFILES' | translate }}
+                </a>
+                <fa-icon [icon]="faSlidersH" class="navbar-icon"></fa-icon>
+              </li>
+              <li class="nav-item py-2">
+                <a routerLink="/payload-decoder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+                  id="payload-decoder">
+                  {{ 'NAV.PAYLOAD-DECODER' | translate }}
+                </a>
+                <fa-icon [icon]="faNetworkWired" class="navbar-icon"></fa-icon>
+              </li>
+            </ul>
+          </li>
+        </div>
         <li class="nav-item py-2 ">
           <a style="cursor: pointer;" class="nav-link pl-5 position-relative rounded" (click)="onLogout()"
             [attr.href]="getKombitLogoutUrl() ? getKombitLogoutUrl() : null"
