IOT-403 set name to optional

--- a/src/app/device-model/device-model-edit/device-model-edit.component.html
+++ b/src/app/device-model/device-model-edit/device-model-edit.component.html
@@ -10,7 +10,7 @@
     <!-- Name -->
     <div class="row mb-2">
         <div class="form-group mt-3 col-12">
-            <label class="form-label" for="name">{{'QUESTION.DEVICE-MODEL.GIVE-NAME' | translate}}</label>*
+            <label class="form-label" for="name">{{'QUESTION.DEVICE-MODEL.GIVE-NAME' | translate}}</label>
             <input type="text" class="form-control" id="name" name="name"
                 [placeholder]="'QUESTION.DEVICE-MODEL.GIVE-NAME-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="deviceModel.body.name"
