--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -53,6 +53,6 @@
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-secondary"
             type="button">{{ 'ORGANISATION.FORM.CANCEL' | translate}}</button>
-        <button class="btn btn-primary ml-2" type="submit">{{ 'SIGFOX.PROFILES.SAVE' | translate}}</button>
+        <button class="btn btn-primary ml-2" type="submit">{{ 'SIGFOX-GROUP.PROFILES.SAVE' | translate}}</button>
     </div>
 </form>
