--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
@@ -2,7 +2,7 @@
 <div class="mat-elevation-z8 row table">
     <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX.PROFILES.DEVICE-TYPE-NAME' | translate }}</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-NAME' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <a [routerLink]="[element.id, 'edit-device-type']" routerLinkActive="active" class="device-link">
                     {{element.name}}
@@ -11,7 +11,7 @@
         </ng-container>
 
         <ng-container matColumnDef="alertEmail">
-            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX.PROFILES.DEVICE-TYPE-ALERT-EMAIL' | translate }}</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-ALERT-EMAIL' | translate }}</th>
             <td mat-cell *matCellDef="let element">{{element.alertEmail}}</td>
         </ng-container>
 
