--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -1,13 +1,13 @@
-<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}" [title]="'SIGFOX.PROFILES.NAME' | translate"></app-top-bar>
+<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}" [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"></app-top-bar>
 
 <div class=" jumbotron m-md-4 p-md-3">
     <div class="row mt-5">
         <div class="col-6">
-            <h4>{{'SIGFOX.PROFILES.DEVICE-TYPE' | translate}}</h4>
+            <h4>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h4>
         </div>
         <div class="col-6">
             <button class="btn btn-primary float-right"
-                (click)="onNewDeviceType()">{{'SIGFOX.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate}}</button>
+                (click)="onNewDeviceType()">{{'SIGFOX-GROUP.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate}}</button>
         </div>
     </div>
     <hr>
