IOT-753 changed field name

--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -80,7 +80,7 @@
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="name">{{'PERMISSION.EDIT.ADD-APPLICATION-AUTOMATIC' | translate}}</label>
             <div class="row">
-                <mat-slide-toggle [(ngModel)]="permission.addApplicationsOnCreate" id="addApplicationsOnCreate" name="addApplicationsOnCreate">
+                <mat-slide-toggle [(ngModel)]="permission.automaticallyAddNewApplications" id="automaticallyAddNewApplications" name="automaticallyAddNewApplications">
                     {{'PERMISSION.EDIT.ADD-APPLICATION-ON-CREATE' | translate}}</mat-slide-toggle>
             </div>
         </div>
