--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,6 +21,9 @@
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="navbar">
       <ul class="navbar-nav flex-column mt-5">
+        <div>
+          <fa-icon [icon]="faUser" class="navbar-icon" style="margin-right: 1em; margin-left: 1em;"></fa-icon> {{getUsername()}}
+        </div>
         <div *ngIf="hasSomePermissions()">
           <li class="nav-item py-2">
             <app-global-admin></app-global-admin>
