--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -76,10 +76,23 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
   width: 100%;
 
   .mat-form-field-wrapper {
+    // .mat-form-field-flex{
+    //   width: 100%;
+    //   .mat-form-field-outline-gap{
+    //     width: 100% !important;
+    //   }
+    // }
+
     .mat-form-field-appearance-fill .mat-form-field-flex {
       background-color: $color-bg-normal !important;
     }
+
   }
+}
+
+.mat-form-field-appearance-outline .mat-form-field-wrapper {
+    margin: 0 !important;
+  
 }
 
 .mat-form-field-appearance-fill .mat-form-field-flex {
