--- a/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
+++ b/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
@@ -12,7 +12,7 @@
       </ul>
     </div>
   
-    <div class="row mb-5">
+    <div class="row mb-2">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="name">{{'QUESTION.GIVE-DATATARGET-NAME' | translate}}</label>*
         <input type="text" class="form-control" id="name" name="name"
@@ -22,7 +22,7 @@
       </div>
     </div>
   
-    <div class="row mb-5">
+    <div class="row mb-2">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="url">{{'QUESTION.GIVE-DATATARGET-URL' | translate}}</label>*
         <input type="text" class="form-control" id="url" name="url"
@@ -30,7 +30,7 @@
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('url'), 'is-valid' : formFailedSubmit && !errorFields.includes('url')}">
       </div>
     </div>
-      <div class="row mb-5">
+      <div class="row mb-2">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="timeout">{{'QUESTION.GIVE-DATATARGET-TIMEOUT' | translate}}</label>*
             <input 
@@ -47,21 +47,20 @@
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('timeout'), 'is-valid' : formFailedSubmit && !errorFields.includes('timeout')}">
         </div>
       </div>
-      <div class="row mb-5">
+      <div class="row mb-2">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="authorizationHeader">{{'QUESTION.GIVE-DATATARGET-AUTHORIZATIONHEADER' | translate}}</label>
-            <textarea 
+            <input type="text"
               class="form-control" id="authorizationHeader" name="authorizationHeader" required
-              [(ngModel)]="datatarget.authorizationHeader" [rows]="6"
+              [(ngModel)]="datatarget.authorizationHeader"
               [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorizationHeader'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorizationHeader')}">
-            </textarea>
         </div>
       </div>
         <div *ngIf="datatargetid === 0">
           <h6> {{'QUESTION.DATATARGET.RELATIONS' | translate}} </h6>
         </div>
         <div class="container row" class="mt-3" *ngIf="datatargetid > 0">
-          <a (click)="addRow()" class="btn btn-secondary my-2">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
+          <a (click)="addRow()" class="btn btn-secondary my-2 mb-3 mt-3">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
           <ng-container *ngIf="devices && payloadDecoders && payloadDeviceDatatarget?.length > 0">
             <table class="table table-striped table-bordered">    
               <tbody>    
@@ -125,8 +124,17 @@
             </table>    
           </ng-container>    
         </div>
+        <mat-slide-toggle 
+            [(ngModel)]="datatarget.setToOpendataDk" 
+            id="setToOpendataDk" 
+            name="setToOpendataDk">
+            {{'DATATARGET.ADD-TO-OPENDATADK' | translate}}
+        </mat-slide-toggle>
+        <div *ngIf="datatarget.setToOpendataDk">
+            <app-opendatadk-edit [openDataDk]="datatarget.openDataDk"></app-opendatadk-edit>
+        </div>
       <div class="form-group mt-5">
           <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-          <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
+          <button [disabled]="disableSaveButton()" class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
         </div>
   </form>
