--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -24,6 +24,14 @@
         </ng-container>
 
         <!-- Location Column -->
+        <ng-container matColumnDef="organizationId">
+            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.ORGANIZATIONID' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.organizationID }}
+            </td>
+        </ng-container>
+
+        <!-- Location Column -->
         <ng-container matColumnDef="location">
             <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
             <td mat-cell *matCellDef="let element">
