--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -6,7 +6,7 @@
             <h4>{{ 'GATEWAY.ID' | translate }}</h4>
             <p class="mb-5">{{gateway.id}}</p>
         </div>
-        <div class="col-md-4 order-first order-md-last ">
+        <div class="col-md-4 order-first order-md-last" *ngIf="gateway.canEdit">
             <div class="btn-group float-md-right dropdown">
                 <button type="button" id="dropdown-{{ gateway.name }}" class="btn btn-primary dropdown-toggle"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
