--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -18,7 +18,7 @@
             <div class="col-xs-12 form-group">
                 <label for="name"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.NAME' | translate}}</label>
-                <input type="text" class="form-control" id="name" name="name"
+                <input type="text" class="form-control" id="name" name="name" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.NAME_PLACEHOLDER' | translate" maxlength="50" required
                     [(ngModel)]="deviceProfile.name">
             </div>
@@ -26,7 +26,7 @@
             <div class="col-xs-12 form-group" *ngIf="deviceProfile.id">
                 <label for="id"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.ID' | translate}}</label>
-                <input type="text" class="form-control" id="id" name="id"
+                <input type="text" class="form-control" id="id" name="id" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.ID_PLACEHOLDER' | translate" maxlength="50" required disabled
                     [ngModel]="deviceProfile.id">
             </div>
@@ -39,6 +39,7 @@
                     [(ngModel)]="deviceProfile.macVersion"> -->
                 <mat-form-field appearance="outline">
                     <mat-select 
+                        [disabled]="!deviceProfile.canEdit"
                         matNativeControl 
                         required
                         [compareWith]="compare"
@@ -57,6 +58,7 @@
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.REGPARAMSREVISION' | translate}}</label>
                 <mat-form-field appearance="outline">
                     <mat-select matNativeControl required name="regParamsRevision"
+                        [disabled]="!deviceProfile.canEdit"
                         [(value)]="deviceProfile.regParamsRevision"
                         [compareWith]="compare">
                         <mat-option value="A">A</mat-option>
@@ -67,7 +69,7 @@
             <div class="col-xs-12 form-group">
                 <label for="maxEIRP"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MAXEIRP' | translate}}</label>
-                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP"
+                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.MAXEIRP_PLACEHOLDER' | translate" maxlength="50" min="0"
                     required [(ngModel)]="deviceProfile.maxEIRP">
             </div>
@@ -75,7 +77,7 @@
             <div class="col-xs-12 form-group">
                 <label for="geolocBufferTTL"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL"
+                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL_PLACEHOLDER' | translate" maxlength="50"
                     required [(ngModel)]="deviceProfile.geolocBufferTTL">
             </div>
@@ -83,7 +85,7 @@
             <div class="col-xs-12 form-group">
                 <label for="geolocMinBufferSize"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize"
+                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE_PLACEHOLDER' | translate" maxlength="50"
                     required [(ngModel)]="deviceProfile.geolocMinBufferSize">
             </div>
@@ -97,7 +99,7 @@
         </mat-tab>
         <mat-tab label="{{'PROFILES.DEVICE_PROFILE.OTAA-ABP' | translate}}">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsJoin" name="supportsJoin">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsJoin" name="supportsJoin" [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.OTAA-ACTIVATE' | translate}}
             </mat-checkbox>
 
@@ -105,28 +107,28 @@
                 <div class="col-xs-12 form-group">
                     <label for="rxDelay1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDELAY1' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDelay1" name="rxDelay1"
+                    <input type="number" class="form-control" id="rxDelay1" name="rxDelay1" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDELAY1_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDelay1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDROffset1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDROFFSET1' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDROffset1" name="rxDROffset1"
+                    <input type="number" class="form-control" id="rxDROffset1" name="rxDROffset1" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDROFFSET1_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDROffset1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDataRate2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDATARATE2' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDataRate2" name="rxDataRate2"
+                    <input type="number" class="form-control" id="rxDataRate2" name="rxDataRate2" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDATARATE2_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDataRate2">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxFreq2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXFREQ2' | translate}}</label>
-                    <input type="number" class="form-control" id="rxFreq2" name="rxFreq2"
+                    <input type="number" class="form-control" id="rxFreq2" name="rxFreq2" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXFREQ2_PLACEHOLDER' | translate" maxlength="50" min="0"
                         required [(ngModel)]="deviceProfile.rxFreq2">
                 </div>
@@ -134,14 +136,14 @@
                     <label for="factoryPresetFreqsInput"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS' | translate}}</label>
                     <input type="text" class="form-control" id="factoryPresetFreqsInput" name="factoryPresetFreqsInput"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate" [disabled]="!deviceProfile.canEdit"
                         maxlength="50" required [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
                 </div>
             </ng-container>
         </mat-tab>
         <mat-tab label="Class B">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassB" name="supportsClassB">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassB" name="supportsClassB" [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSB_ACTIVATE' | translate}}
             </mat-checkbox>
 
@@ -149,7 +151,7 @@
                 <div class="col-xs-12 form-group">
                     <label for="classBTimeout"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT' | translate}}</label>
-                    <input type="number" class="form-control" id="classBTimeout" name="classBTimeout"
+                    <input type="number" class="form-control" id="classBTimeout" name="classBTimeout" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.classBTimeout">
                 </div>
@@ -157,7 +159,7 @@
                 <div class="col-xs-12 form-group">
                     <mat-form-field appearance="outline">
                         <mat-label>{{'PROFILES.DEVICE_PROFILE.PINGSLOTPERIOD' | translate}}</mat-label>
-                        <select matNativeControl required name="pingSlotPeriod"
+                        <select matNativeControl required name="pingSlotPeriod" [disabled]="!deviceProfile.canEdit"
                             [(ngModel)]="deviceProfile.pingSlotPeriod" [value]="deviceProfile.pingSlotPeriod">
                             <option value="32">Every second</option>
                             <option value="64">Every 2 seconds</option>
@@ -174,7 +176,7 @@
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotDR"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTDR' | translate}}</label>
-                    <input type="number" class="form-control" id="pingSlotDR" name="pingSlotDR"
+                    <input type="number" class="form-control" id="pingSlotDR" name="pingSlotDR" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTDR_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.pingSlotDR">
                 </div>
@@ -182,7 +184,7 @@
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotFreq"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ' | translate}}</label>
-                    <input type="number" class="form-control" id="pingSlotFreq" name="pingSlotFreq"
+                    <input type="number" class="form-control" id="pingSlotFreq" name="pingSlotFreq" [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.pingSlotFreq">
                 </div>
@@ -190,13 +192,13 @@
         </mat-tab>
         <mat-tab label="Class C">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassC" name="supportsClassC">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassC" name="supportsClassC" [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSC_ACTIVATE' | translate}}
             </mat-checkbox>
             <div class="col-xs-12 form-group">
                 <label for="classCTimeout"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT' | translate}}</label>
-                <input type="number" class="form-control" id="classCTimeout" name="classCTimeout"
+                <input type="number" class="form-control" id="classCTimeout" name="classCTimeout" [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
                     min="0" required [(ngModel)]="deviceProfile.classCTimeout">
             </div>
@@ -208,7 +210,7 @@
                 <button type="button" class="btn btn-secondary" (click)="routeBack()">
                     {{'PROFILES.DEVICE_PROFILE.CANCEL' | translate}}
                 </button>
-                <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid'">
+                <button type="submit" class="btn btn-primary ml-3" [disabled]="!deviceProfile.canEdit || !'is-valid'">
                     {{'PROFILES.DEVICE_PROFILE.SAVE' | translate}}
                 </button>
             </div>
